# semantic-eo

./: .gitignore  README.md  pyproject.toml
src/semanticeo/: llm_analyse.py  llm_vector_db.py  s2_processing.py  utils.py
